# open-cycle-time

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/ISSUE_TEMPLATE/: agile-user-story.md
.github/PULL_REQUEST_TEMPLATE/: develop-pull-request-template.md
.github/workflows/: build.yml  continuous-integration.yml
include/: gui_context.h  gui_functions.h  open_cycle_time.h
src/: gui_context.cpp  gui_functions.cpp  open_cycle_time.cpp
test/: CMakeLists.txt  tests.cpp
